fix(mobile): Align bullet points left while centering list block

--- a/css/style.css
+++ b/css/style.css
@@ -557,8 +557,13 @@ iframe {
         text-align: center;
     }
 
+    .about-content ul {
+        display: inline-block;
+        text-align: left;
+    }
+
     .about-content ul li {
-        justify-content: center;
+        justify-content: flex-start;
     }
 
     .footer-grid {
